upspoon/authorization-user/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: upspoon-authorization-user
  name: upspoon-authorization-user
spec:
  ports:
    - name: 9000-9000
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: upspoon-authorization-user
  type: LoadBalancer
