upspoon/authorization-user/deployment/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upspoon-authorization-user-ingress
spec:
  rules:
    - host: upspoon-authorization-user.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: upspoon-authorization-user
                port:
                  number: 80
